# max

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt  Инструкция MAX.docx
app/: __init__.py  bootstrap.py  config.py  db.py  domain.py  enums.py  function_handler.py  main.py  models.py  seed.py  test_reminder.py  web.py  ydb_schema.py
docs/: architecture.md  development.md  glossary.md  max-api.md  max-image-assets.md  performance-audit.md  user-flows.md  yandex-cloud.md  ydb.md
scripts/: build-yc-package.ps1  build-yc-package.sh  deploy-yc.ps1  deploy-yc.sh  dev-down.ps1  dev-up.ps1  dev-up.sh  init-ydb-schema.ps1  init-ydb-schema.sh  migrate-to-ydb.ps1  migrate-to-ydb.sh  seed.ps1  seed.sh  send-sample-update.ps1  send-sample-update.sh  send-test-reminder.ps1  test.ps1  test.sh  upload_max_assets.py
seed/: events.yaml
tests/: conftest.py  test_admin_menu.py  test_bot_assets.py  test_bot_deeplinks.py  test_bot_flow.py  test_button_label_quality.py  test_deeplinks.py  test_deploy_scripts.py  test_domain_registration.py  test_env_files.py  test_event_deeplinks_storage.py  test_event_lifecycle.py  test_function_handler.py  test_maxapi_adapter.py  test_migration.py  test_notification_worker.py  test_organizer_builder.py  test_organizer_datetime_parser.py  test_organizer_notifications.py  test_performance_metrics.py  test_storage_hot_paths.py  test_storage_loading_flags.py  test_test_reminder_script.py  test_upload_max_assets_script.py  test_webhook.py  (+1 more)
(+33 files in other folders)
